--- a/index.html
+++ b/index.html
@@ -25,43 +25,43 @@
   <div class="column">
     <div class="content">
       <h3 align="center">Activity 1</h3>
-      <img src="c:\Users\hans andrei\Desktop\sabela\sabela3.jpg" alt="activity1" style="width:100%">
-      	<a href="c:\Users\hans andrei\Desktop\sabela\Act1Sabela.html" target="_blank">Click here to learn more. </a></p>
+      <img src="sabela3.jpg" alt="activity1" style="width:100%">
+      	<a href="Act1Sabela.html" target="_blank">Click here to learn more. </a></p>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <h3 align="center">Activity 2</h3>
-    <img src="c:\Users\hans andrei\Desktop\sabela\sabela4.jpg" alt="Activity2" style="width:100%">
-        <a href="c:\Users\hans andrei\Desktop\sabela\Act2Sabela.html" target="_blank">Click here to learn more. </a></p>
+    <img src="sabela4.jpg" alt="Activity2" style="width:100%">
+        <a href="Act2Sabela.html" target="_blank">Click here to learn more. </a></p>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <h3 align="center">Activity 3</h3>
-    <img src="c:\Users\hans andrei\Desktop\sabela\sabela5.jpg" alt="Nature" style="width:100%">
-        <a href="c:\Users\hans andrei\Desktop\sabela\Act3Sabela.html" target="_blank"> Click here to learn more. </a></p>
+    <img src="sabela5.jpg" alt="Nature" style="width:100%">
+        <a href="Act3Sabela.html" target="_blank"> Click here to learn more. </a></p>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <h3 align="center">Activity 4</h3>
-    <img src="c:\Users\hans andrei\Desktop\sabela\sabela6.jpg" alt="Mounta" style="width:100%">
-        <a href="c:\Users\hans andrei\Desktop\sabela\Act4Sabela.html">Click here to learn more.</a></p>
+    <img src="sabela6.jpg" alt="Mounta" style="width:100%">
+        <a href="Act4Sabela.html">Click here to learn more.</a></p>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <h3 align="center">Activity 5</h3>
-      <img src="c:\Users\hans andrei\Desktop\sabela\sabela7.jpg" alt="activity1" style="width:100%">
-        <a href="c:\Users\hans andrei\Desktop\sabela\act5SABELA.html" target="_blank">Click here to learn more. </a></p>
+      <img src="sabela7.jpg" alt="activity1" style="width:100%">
+        <a href="act5SABELA.html" target="_blank">Click here to learn more. </a></p>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <h3 align="center">Activity 6</h3>
-      <img src="c:\Users\hans andrei\Desktop\sabela\sabela8.jpg " alt="activity1" style="width:100%">
-        <a href="c:\Users\hans andrei\Desktop\sabela\Act6Sabela.html" target="_blank">Click here to learn more. </a></p>
+      <img src="sabela8.jpg " alt="activity1" style="width:100%">
+        <a href="Act6Sabela.html" target="_blank">Click here to learn more. </a></p>
     </div>
   </div>
 
